// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionFunctionCall.vue Should display transaction call 1`] = `
<div class="pa-2 grey lighten-3">
  <div>
    <div class="mb-2">
      Function: transfer(address dst, uint256 rawAmount)
    </div>
    Params:
    <div>
      dst: 0xc00e94Cb662C3520282E6f5717214004A7f26888
    </div>
    <div>
      rawAmount: 1
    </div>
  </div>
</div>
`;

exports[`TransactionFunctionCall.vue Should display warning if no ABI 1`] = `
<div class="pa-2 grey lighten-3">
  <div><i>Upload contract artifact <a href="#/address/0xc00e94cb662c3520282e6f5717214004a7f26888?tab=contract" class="">here</a> to decode function parameters.</i></div>
</div>
`;

exports[`TransactionFunctionCall.vue Should handle arrays as parameters 1`] = `
<div class="pa-2 grey lighten-3">
  <div>
    <div class="mb-2">
      Function: reproWriteBug(uint256[] values)
    </div>
    Params:
    <div>
      values: [1, 3]
    </div>
  </div>
</div>
`;
